- Several internal fixes for issues thrown up by Swedish localisation.
- View->Next Unread now goes to folders that have subscriptions with unread articles as well
  as to the subscriptions themselves. This causes Vienna to respect the closed state of group
  folders.
- Improved the logic by which folder images are retrieved to make this more reliable.
- New About Vienna window.

2.0.0.2003
----------
- Add an option to mark the current article read after 1 second. This is now the new default.
- Fix import/export to convert characters such as <, > and & to and from their entity equivalents
  in URL fields as per XML specification.
- Add View->Article Page to display the original web page from which the article came. The short
  cut for this is 'P'. The command toggles between the web page and the original article.
- Support content:encoding in RSS 2.0 feeds and use that to override description where available.
  (This fixes the parsing of sites such as http://feeds.feedburner.com/MajorNelson).
- In Atom feeds, where no explicit author is specified for an article, use the feed author if available.
- Mark All Read now works in smart folders.
- Add File->Close Window command to close the main Vienna window and Window->Main Window to reopen
  it again. While the main window is closed, all UI commands are disabled.
- Add "Refresh All Subscriptions" to the application dock menu. Other things will follow on the
  dock menu but this was the most common one that people requested.
- Trim title fields to the first non-blank line. Some feeds had titles with multiple lines and
  these cause display problems in the UI.
- When subscribing to a feed, we now check to see if there's an active connection available and if
  so, we refresh the new feed immediately. If there's no active connection then the refresh is
  deferred.
- New layout style when the article pane is to the right of the article list. In this layout, the